fix(context-menu): correct high contrast color (#1235)
* fix(context): correct high contrast color

* fix(context): correct high contrast color

--- a/projects/ng-aquila/src/context-menu/context-menu-item.component.scss
+++ b/projects/ng-aquila/src/context-menu/context-menu-item.component.scss
@@ -22,7 +22,7 @@
     @media screen and (forced-colors: active) {
         forced-color-adjust: none;
         background-color: buttonFace;
-        color: button;
+        color: buttonText;
     }
 
     &:not(:disabled) {
